Must use older Java syntax in DSpace 7